@@ -2,7 +2,7 @@
 //
 // iterator.h: Rcpp R/C++ interface class library -- 
 //
-// Copyright (C) 2012   Dirk Eddelbuettel and Romain Francois
+// Copyright (C) 2012 - 2013    Dirk Eddelbuettel and Romain Francois
 //
 // This file is part of Rcpp.
 //
@@ -42,9 +42,17 @@ namespace sugar {
         SugarIterator( const SugarIterator& other) : ref(other.ref), index(other.index){}
         
         inline iterator& operator++(){ index++; return *this ; }
-        inline iterator& operator++(int){ index++; return *this ; }
+        inline iterator operator++(int){ 
+            iterator orig(*this) ;
+            ++(*this); 
+            return orig ;
+        }
         inline iterator& operator--(){ index--; return *this ; }
-        inline iterator& operator--(int){ index--; return *this ; }
+        inline iterator operator--(int){ 
+            iterator orig(*this) ;
+            --(*this); 
+            return orig ;
+        }
         inline iterator operator+(difference_type n) const {
 			return iterator( ref, index+n ) ;
 		}
